feat: support developing mv2 and mv3 same time

--- a/package.json
+++ b/package.json
@@ -5,23 +5,28 @@
   "private": true,
   "description": "Fast copy a Degit command path in github repository page",
   "scripts": {
-    "dev:chromium": "npm run clear && cross-env NODE_ENV=development TARGET=chrome esno build.ts",
-    "dev:firefox": "npm run clear && cross-env NODE_ENV=development TARGET=firefox esno build.ts",
-    "build:chromium": "npm run clear && cross-env NODE_ENV=production TARGET=chrome esno build.ts",
-    "build:firefox": "npm run clear && cross-env NODE_ENV=production TARGET=firefox esno build.ts",
-    "pack": "cross-env NODE_ENV=production run-p pack:*",
-    "pack:zip": "web-ext build --artifacts-dir ./ --source-dir ./extension --filename extension.zip --overwrite-dest",
-    "pack:crx": "crx pack extension -o ./extension.crx",
-    "pack:xpi": "web-ext build --artifacts-dir ./ --source-dir ./extension --filename extension.xpi --overwrite-dest",
-    "start:chromium": "web-ext run --target chromium --args='--auto-open-devtools-for-tabs' --args='--start-maximized'",
-    "start:firefox": "web-ext run --firefox firefox.exe --browser-console",
-    "clear": "rimraf extension/dist extension/manifest.json extension.*",
+    "dev:all": "esno build.ts -t chromium,firefox",
+    "dev:chromium": "esno build.ts -t chromium",
+    "dev:firefox": "esno build.ts -t firefox",
+    "build:all": "esno build.ts -t chromium,firefox -p",
+    "build:chromium": "esno build.ts -t chromium -p",
+    "build:firefox": "esno build.ts -t firefox -p",
+    "pack": "run-p pack:chromium:* & run-p pack:firefox:*",
+    "pack:chromium:zip": "web-ext build -a ./.output -s ./extension/chromium --filename chromium.zip -o",
+    "pack:chromium:crx": "crx pack extension/chromium -o ./.output/chromium.crx",
+    "pack:chromium:xpi": "web-ext build -a ./.output -s ./extension/chromium --filename chromium.xpi -o",
+    "pack:firefox:zip": "web-ext build -a ./.output -s ./extension/firefox --filename firefox.zip -o",
+    "pack:firefox:crx": "crx pack extension/firefox -o ./.output/firefox.crx",
+    "pack:firefox:xpi": "web-ext build -a ./.output -s ./extension/firefox --filename firefox.xpi -o",
+    "start:chromium": "web-ext run -s ./extension/chromium --target chromium --args='--auto-open-devtools-for-tabs' --args='--start-maximized'",
+    "start:firefox": "web-ext run -s ./extension/firefox --firefox firefox.exe --browser-console",
+    "start:all": "concurrently -n Chromium,Firefox -c blue.bold,yellow.bold \"pnpm start:chromium\" \"pnpm start:firefox\"",
+    "clear": "rimraf extension/chromium extension/firefox extension/__COMMON__ .output",
     "lint": "eslint 'src/**/*.{json,ts,js,vue}'",
-    "lint:firefox": "web-ext lint"
+    "lint:firefox": "web-ext lint -s ./extension/firefox"
   },
   "devDependencies": {
     "@aliuq/eslint-config": "^0.0.2",
-    "@ffflorian/jszip-cli": "^3.1.6",
     "@iconify/json": "^2.1.28",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^17.0.23",
@@ -31,14 +36,17 @@
     "@vue/compiler-sfc": "^3.2.32",
     "@vueuse/core": "^8.2.5",
     "chokidar": "^3.5.3",
+    "concurrently": "^7.1.0",
     "cross-env": "^7.0.3",
     "crx": "^5.0.1",
     "eslint": "^8.13.0",
     "esno": "^0.14.1",
+    "execa": "^6.1.0",
     "fs-extra": "^10.0.1",
     "kolorist": "^1.5.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.3",
     "unbuild": "^0.7.4",
     "unplugin-auto-import": "^0.7.1",
@@ -57,8 +65,7 @@
     "firefox 48"
   ],
   "webExt": {
-    "verbose": true,
-    "sourceDir": "./extension",
+    "verbose": false,
     "run": {
       "firefoxProfile": "default-release-2",
       "startUrl": [
