remove extra deps

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "description": "Fast copy a Degit command path in github repository page",
   "author": "AliuQ",
   "scripts": {
-    "dev:all": "esno build.ts -t chromium,firefox",
+    "dev": "esno build.ts -t chromium,firefox",
     "dev:chromium": "esno build.ts -t chromium",
     "dev:firefox": "esno build.ts -t firefox",
-    "build:all": "npm run clear & esno build.ts -t chromium,firefox -p",
+    "build": "npm run clear & esno build.ts -t chromium,firefox -p",
     "build:chromium": "esno build.ts -t chromium -p",
     "build:firefox": "esno build.ts -t firefox -p",
     "pack": "run-p pack:chromium:* & run-p pack:firefox:*",
@@ -38,19 +38,15 @@
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/compiler-sfc": "^3.2.32",
     "@vueuse/core": "^8.2.5",
-    "bumpp": "^7.1.1",
     "chokidar": "^3.5.3",
     "concurrently": "^7.1.0",
-    "cross-env": "^7.0.3",
     "crx": "^5.0.1",
     "eslint": "^8.13.0",
     "esno": "^0.14.1",
-    "execa": "^6.1.0",
     "fs-extra": "^10.0.1",
     "kolorist": "^1.5.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.7.0",
     "typescript": "^4.6.3",
     "unbuild": "^0.7.4",
     "unplugin-auto-import": "^0.7.1",
