--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clear": "rimraf extension/chromium extension/firefox extension/__COMMON__ .output",
     "lint": "eslint 'src/**/*.{json,ts,js,vue}'",
     "lint:firefox": "web-ext lint -s ./extension/firefox",
+    "prerelease": "suzip -s ./ -o .output/source.zip -I .gitignore --dot",
     "release": "npx bumpp --commit --tag --push"
   },
   "homepage": "https://github.com/aliuq/degit-webext",
@@ -47,6 +48,7 @@
     "kolorist": "^1.5.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
+    "suzip": "^0.1.5",
     "typescript": "^4.6.3",
     "unbuild": "^0.7.4",
     "unplugin-auto-import": "^0.7.1",
